@@ -1,3 +1,7 @@
+2009-07-24  Martin Schröder  <martin@oneiros.de>
+
+	* printversion.c: don't nest extern declarations
+
 2009-06-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* basechsuffix.c, chartostring.c, coredump.c, eofeoln.c,
